--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,8 +44,8 @@
 <!-- layouts/pwd end -->
 
 
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+<p id="notice"><%= notice %></p>
+<p id="alert"><%= alert %></p>
 
 <div class="container">
 <div class="row">
