--- a/app/views/files/upload.html.erb
+++ b/app/views/files/upload.html.erb
@@ -1,17 +1,18 @@
 <div class="container span5">
 
-<%= form_for @file_info,:url =>{:controller=>"upload", :action=>"create"}, :html => { :multipart => true, :id=>"fileupload"  } do |f| %>
+<%= form_for @file_info,:url =>{:controller=>"files", :action=>"create"}, :html => { :multipart => true, :id=>"fileupload"  } do |f| %>
     <span class="btn btn-success fileinput-button">
         <i class="glyphicon glyphicon-plus"></i>
         <span>Select files...</span>
         <!-- The file input field used as target for the file upload widget -->
          <%= f.file_field :path , :multiple=>""%>
     </span>
-	<%= f.hidden_field :owner_id, :value => "0" %>
-	<%= f.hidden_field :course_id, :value => "5" %>
+	
+	<%= f.hidden_field :course_id, :value => "4" %>
 	<button id="upload" class="btn btn-primary " type="button" >Upload</button>
-	<table class="table table-striped" id="file_queue">
-	<tr></tr>
+	<table class="table" id="file_queue">
+	<tr><th>檔名</th><th>size</th><th>進度</th>
+	</tr>
     </table>
 <% end %>
 
@@ -20,54 +21,71 @@
 
 
 <script>
-
+  /*function check(){
+	alert
+  }*/
   
   $(function () {
         'use strict';
+		var totalupload=0;
 		
-
 		$("#fileupload").fileupload( {
 			
 			add: function (e, data) {
-				//alert(data.originalFiles[0]['size']);
 				var acceptFileTypes = /^.*\.*<%=FileInfo.support_types%>$/i;
-				if (data.originalFiles[0]['type'] && !acceptFileTypes.test(data.originalFiles[0]['name'])) {
-					//
-					//data="";
-				}
-				else if(data.originalFiles[0]['size'] > <%=FileInfo.max_upload_size%>){
-				    alert("!!!!");
-				}
-				else{
-					var progressbar=
-							'<div class="progress">'+
-							'<div class="progress-bar progress-bar-success"></div>'+
-							'</div>';
-						$('#file_queue tr:last').after("<tr ><td>"+data.originalFiles[0]['name']+"</td><td>"+progressbar+"</td></tr>")
-					$("#upload").click(function () {
-						data.submit();
-					});
-				}
+				var progressbar=
+					'<div class="progress">'+
+					'<div class="progress-bar progress-bar-success"></div>'+
+					'</div>';
+				var success="";
+				$.each(data.files, function (index, file) {
+					//alert(file.type);
+					if (!acceptFileTypes.test(file.name) ||
+					    file.size > <%=FileInfo.max_upload_size%>) {
+						success="danger";
+						data=0;
+					}
+					else{
+						success="info";
+					}
+					$('#file_queue tr:last').after("<tr class='"+success+"'><td >"+file.name+"</td><td>"+progressbar+"</td></tr>");
+				});
+				
+				$("#upload").click(function () {
+						
+						if(data!=0){data.submit();
+							alert(data.files.length);}
+				});
+
 			},
 			
 			stop: function (e, data) {
 				$('#upload').off('click');
-				alert("上傳成功!");
+				//alert("上傳成功!");
+				//alert(data);
+				//$("#notice").html(data);
+				$('#file_queue').html("<tr></tr>");
 			},
 			progress:function (e, data) {
 				$.each(data.files, function (index, file) {
 					var progress = parseInt(data.loaded / data.total * 100, 10);
-					$("td:contains('"+file.name+"')").next("td").find("div").contents().css('width',progress + '%')	
-				});
-
-				
+					$("td:contains('"+file.name+"')").next("td").find("div").contents().css('width',progress + '%');	
+				});	
 			},
+			/*change:function (e, data) {
+				$.each(data.files, function (index, file) {
+					//console.log('Selected file: ' + file.name);
+					//alert(file.type);
+					var progressbar=
+						'<div class="progress">'+
+						'<div class="progress-bar progress-bar-success"></div>'+
+						'</div>';
+					$('#file_queue tr:last').after("<tr ><td>"+file.name+"</td><td>"+file.size+"</td><td>"+progressbar+"</td></tr>");
+				});
+			}*/
 
     });
-	$("#fileupload").fileupload('option',{
-		maxFileSize:10000000,//10mb
-		//acceptFileTypes :/(\.|\/)(gif|jpe?g|png)$/i
-	});
+	
 	
   });
 
