--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,7 +1,33 @@
-﻿<div class="jumbotron">
+﻿
+<div class="jumbotron">
       <div class="container">
         <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" role="button">Learn more »</a></p>
+        <p>歡迎來到交大資工PipeLine 這是一個資源共享的平台:D，</p>
+		<p>可以分享曾經修課寫過的作業、筆記、原文書解答，</p>
+		<p>但我們不是抄作業平台喔XD 所以有對學弟妹做一點限制</p>
+		<p>希望大家能夠一起討論、研究、嗨趴!</p>
+        <p><a class="btn btn-primary btn-lg" role="button">facebook登入 »</a></p>
       </div>
+</div>
+<div class="thumbnail">
+          <div class="caption">
+            <h4>Hello, world!</h4>
+			<hr>
+            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+            <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+          </div>
+</div>
+
+<div class="alert alert-info">...</div>
+<div class="code-toolbar">
+
+<%=clippy("123").html_safe;%>
+<pre class="prettyprint linenums:1">
+public class HelloWorld {
+
+    public static void main (String[] args) {
+        System.out.println("Hello, world!");
+    }
+}
+</pre>
 </div>
