--- a/app/assets/stylesheets/course.css.scss
+++ b/app/assets/stylesheets/course.css.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the course controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.course-tag{
+  color:white;
+}
+.course-tag:hover {color:white;}
