--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,70 +1,50 @@
-<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-inverse" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="">CS notes</a>
+
+      <a class="navbar-brand" href="<%=root_url%>">NCTUCS PipeLine</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <% Grade.all.each do |grade_name| %>
-  	    <li class="dropdown">
-          <a href="#" role="button" class="dropdown-toggle" data-toggle="dropdown"><%= grade_name.name %><b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <% grade_name.course.each do |_course| %>
-            <li>
-              
-			   <%= link_to(course_path(_course)) do %>
-			  <%=_course.ch_name%> <span class="badge pull-right"><%=_course.file_info.all.count%></span>
-			  <% end %>
-              <!-- <ul class="dropdown-menu sub-menu">
-                <li>
-                  <a href="#"><span class="badge pull-right">42</span>投影片</a>
-                </li>
-                <li>
-                  <a href="#">作業<span class="badge pull-right">42</span></a>
-                </li>
-              </ul> -->
-            </li>
-            <!-- <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li> -->
-            <% end %>
-          </ul>
-        </li>
-        <% end %>
+	  <% if current_user %>
 	  <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%=current_user.name%><b class="caret"></b></a>
         <ul class="dropdown-menu">
-		<% if current_user && current_user.activated==3 %>
+		<% if current_user.activated==3 %>
 		  <li><a href="/files/one_user">檔案<span class="badge pull-right"><%=FileInfo.where(:owner_id=>current_user.id).count%></span></a></li>
 		  
 		<% end %>  
         </ul>
       </li>
+	  <% else %>
+	  <li>
+	  <%= link_to "Sign in", "/auth/facebook", id: "sign_in" %>
+	  <% end %>
+	  </li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">管理<b class="caret"></b></a>
         <ul class="dropdown-menu">
 		<% if current_user && current_user.activated==3 %>
+		  <li><a href="/post">筆記<span class="badge pull-right"><%=Post.all.count%></span></a></li>
 		  <li><a href="/files/all_users">檔案庫<span class="badge pull-right"><%=FileInfo.all.count%></span></a></li>
-		  <li><a href="/files/upload">上傳</li>
           <li><a href="/user/manage">使用者<span class="badge pull-right"><%=User.all.count%></span></a></li>
 		  <li><a href="/course">課程<span class="badge pull-right"><%=Course.all.count%></span></a></li>
 		<% end %>  
         </ul>
       </li>
       </ul>
-
+	   <form class="navbar-form " role="search">
+          <div class="input-group searchstyle">
+            <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
+            <div class="input-group-btn">
+              <button class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span></button>
+            </div>
+          </div>
+        </form>
+		<!---
       <ul class="nav navbar-nav navbar-right">
 	    <% if current_user.blank? %>
 	    <%= link_to "Sign in", "/auth/facebook", id: "sign_in", class:"btn btn-primary navbar-btn" %>
@@ -73,9 +53,19 @@
 		<a class="btn btn-primary btn-large" href="/user/registry" data-toggle="modal" data-target="#myModal">註冊</a>
 		<% end %>
       </ul>
+	  --->
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
 
-
+<script>
+$('#srch-term').tokenfield({
+  autocomplete: {
+    source: [<%=course_tag.html_safe%>],
+    delay: 100
+  },
+  showAutocompleteOnFocus: true,
+  
+})
+</script>
 
