--- a/app/views/courses/_show_posts.html.erb
+++ b/app/views/courses/_show_posts.html.erb
@@ -1,3 +1,9 @@
+<script>
+function show_panelbody(id){
+	$(id).attr("class","panel-body");
+}
+</script>
+
 <br>
 <div class="panel panel-default">
 	  <div class="panel-heading">
