--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,45 +9,40 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-	  <% if current_user %>
-	  <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%=current_user.name%><b class="caret"></b></a>
-        <ul class="dropdown-menu">
-		<% if current_user.activated==3 %>
-		  <li><a href="/file_infos/one_user">檔案<span class="badge pull-right"><%=FileInfo.where(:owner_id=>current_user.id).count%></span></a></li>
-		  
-		<% end %>  
-        </ul>
-      </li>
-	  <% else %>
-	  <li>
-	  <%= link_to "Sign in", "/auth/facebook", id: "sign_in" %>
-	  <% end %>
-	  </li>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">管理<b class="caret"></b></a>
-        <ul class="dropdown-menu">
-		<% if current_user && current_user.activated==3 %>
-		  <li><a href="/post">筆記<span class="badge pull-right"><%=Post.all.count%></span></a></li>
-		  <li><a href="/files/all_users">檔案庫<span class="badge pull-right"><%=FileInfo.all.count%></span></a></li>
-          <li><a href="/user/manage">使用者<span class="badge pull-right"><%=User.all.count%></span></a></li>
-		  <!--<li><a href="/courses">課程<span class="badge pull-right"><%=Course.all.count%></span></a></li>-->
-		  <li><a href="/departments">系<span class="badge pull-right"><%=Department.all.count%></span></a></li>
-		<% end %>  
-        </ul>
-      </li>
+				<li class="dropdown">
+				<% if current_user %>
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><%=current_user.name%><b class="caret"></b></a>
+					<ul class="dropdown-menu">
+					<li><a href="/file_infos/one_user">課程地圖<span class="badge pull-right"><%=FileInfo.where(:owner_id=>current_user.id).count%></span></a></li>
+					<li><a href="/file_infos/one_user">檔案<span class="badge pull-right"><%=FileInfo.where(:owner_id=>current_user.id).count%></span></a></li>
+					</ul>
+				<% else %>
+					<%= link_to "facebook登入", "/auth/facebook", id: "sign_in" %>
+				<% end %>  
+				</li>
+
+				<!--<li class="dropdown">
+					<a href="#"  class="dropdown-toggle" data-toggle="dropdown">facebook登入<b class="caret"></b></a>
+					<ul class="dropdown-menu user-reg" id="user_reg" >
+					<% render "/user/registry" %>
+					</ul>
+				</li>-->
+				<% if current_user && TopManager.find_by_user_id(current_user.id) %>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">管理<b class="caret"></b></a>
+						<ul class="dropdown-menu">
+							
+								<li><a href="/post">筆記<span class="badge pull-right"><%=Post.all.count%></span></a></li>
+								<li><a href="/files/all_users">檔案庫<span class="badge pull-right"><%=FileInfo.all.count%></span></a></li>
+								<li><a href="/user/manage">使用者<span class="badge pull-right"><%=User.all.count%></span></a></li>
+							<!--<li><a href="/courses">課程<span class="badge pull-right"><%=Course.all.count%></span></a></li>-->
+								<li><a href="/departments">系<span class="badge pull-right"><%=Department.all.count%></span></a></li>
+								
+						</ul>
+					</li>
+				<% end %>
       </ul>
 
-		<!---
-      <ul class="nav navbar-nav navbar-right">
-	    <% if current_user.blank? %>
-	    <%= link_to "Sign in", "/auth/facebook", id: "sign_in", class:"btn btn-primary navbar-btn" %>
-		<% end %>
-		<% if current_user && current_user.activated==0 %>
-		<a class="btn btn-primary btn-large" href="/user/registry" data-toggle="modal" data-target="#myModal">註冊</a>
-		<% end %>
-      </ul>
-	  --->
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
