--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -99,10 +99,15 @@ $( document ).ready( function(){
 			if(e.which == 85||e.which==117 //U or u
 			 ||e.which==71||e.which==103 //G or g
 			 ||e.which==67||e.which==99){//C or c
-				//console.log();
-				$("#degree_select").focus();
-				//$("#degree_select").autocomplete("search", "");
-				
+				$("#degree_select").trigger("focus");
+			}
+			if(e.which == 68||e.which==100){ //D or d
+				e.preventDefault();
+				$("#department_select").trigger("focus");
+			}
+			if(e.which == 47){ // '/'
+				e.preventDefault();
+				$("#search_term").trigger("focus");
 			}
 		}
 	});	
@@ -296,7 +301,7 @@ function show_search_result(courses){
 </div>
 
 <p class="text-center">
-快速鍵: 選擇類別-[U]ndergraduate:大學部 [G]raduate:研究所 [C]ommon:通識 [D]epartment:系所
+快速鍵: 選擇類別-[U]ndergraduate:大學部 [G]raduate:研究所 [C]ommon:通識 [D]epartment:系所 [/]:關鍵字
 </p>
 <div id="search_result">
 
