sort courses by score

--- a/app/views/courses/_show_files.html.erb
+++ b/app/views/courses/_show_files.html.erb
@@ -47,8 +47,10 @@
 				</button>
 				<input type="checkbox" class="toggle">--->
 			</div>
+		<% else %>
+			請先登入後才能上傳、下載檔案!
 		<%end%>
-		請先登入後才能上傳檔案!
+		
 		</div>
 	</div>
   <% end %>
