--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @course.ch_name %>(<%= @course.eng_name %>)</h1>
 
 <ul class="nav nav-tabs">
-  <li class="active" id="infos-link"><a href="#" onclick="show_item('infos');">課程資訊</a></li>
+  <li class="active" id="infos-link"><a href="#" onclick="show_item('infos');">教授比一比</a></li>
   <!--<li class="" id="posts-link"><a href="#" onclick="show_item('posts');">文章</a></li>-->
   <li class="" id="files-link"><a href="#" onclick="show_item('files');" >檔案</a></li>
 </ul>
