--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
 
-      <a class="navbar-brand" href="<%=root_url%>">NCTUCS Note</a>
+      <a class="navbar-brand" href="<%=root_url%>">NCTU+</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -43,7 +43,7 @@
 					</li>
 				<% end %>
 				<li><a href="/courses/">課程列表</a></li>
-				<li><a href="/courses/pre_schedule">預排課表</a></li>
+				<li><a href="/courses/simulation">預排課表</a></li>
       </ul>
 
     </div><!-- /.navbar-collapse -->
