--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,6 +4,7 @@
     <div class="navbar-header">
 
       <a class="navbar-brand" href="<%=root_url%>">NCTU+</a>
+			<% image_tag("logo.png", :size=>"80x50")%>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
