--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -11,7 +11,7 @@
 
 body
 {	
-	
+	font-family :Microsoft JhengHei;
 	//width:800px;
 	height: 100%;
 	//text-align:center;
@@ -52,7 +52,7 @@ text-decoration:none;
 }
 
 
-.clickable-hover>tbody>tr {
+.clickable-hover/*>tbody>tr*/ {
 	cursor: pointer;
 }
 .scrollable{
@@ -61,14 +61,9 @@ text-decoration:none;
 }
 
 
-.schedule-grid{
-	height :50px;
-}
 
-.schedule-slot-empty{
-	//height :50px;
-	background-color:white;
-}
+
+
 
 
 .btn-circle {
@@ -114,4 +109,15 @@ img.bg {
   position: fixed;
   top: 0;
   left: 0;
+}
+
+.bg-white-transparent{
+	background-color:white;
+	opacity:0.75;
+	zoom:1;
+}
+
+.vertical-text {
+	transform: rotate(90deg);
+	transform-origin: left top 0;
 }
