--- a/app/views/courses/course_lists.html.erb
+++ b/app/views/courses/course_lists.html.erb
@@ -1,7 +1,7 @@
 
 
 
-<table class="table table-hover clickable-hover " id="course_table" >
+<table class="table table-hover  " id="course_table" >
 
 
 
@@ -15,44 +15,44 @@
 <th class="col-md-2">課名</th>
 <th class="col-md-1">老師</th>
 <th class="col-md-3">簡介</th>
-<th>時間</th>
-<th>學分</th>
+<th class="col-md-2">時間</th>
+<th class="col-md-2">學分</th>
 
 </tr>
 
-
-	<% @course_details.each do |cd|%>
-		<% course=cd.course_teachership.course %>
-			<% ctrs=cd.course_teachership.course_teacher_ratings %>
-			<% ctr_cold=ctrs.select{|ctr| ctr.rating_type=="cold"}[0] %>
-			<% ctr_sweety=ctrs.select{|ctr| ctr.rating_type=="sweety"}[0] %>
-			<% ctr_hardness=ctrs.select{|ctr| ctr.rating_type=="hardness"}[0] %>
-			<% ctr_all_avg = (ctr_cold.avg_score*ctr_cold.total_rating_counts+ctr_sweety.avg_score*ctr_sweety.total_rating_counts+ctr_hardness.avg_score*ctr_hardness.total_rating_counts)/ctrs.sum(:total_rating_counts) %>
-			<tr id="<%=cd.id%>" class="clickable-row" href="<%=course_path(course)%>">
-				<td>
-					<p id="rating_all" class="rating all">
-					<%if !ctr_all_avg.nan? %>
-					<%= ctr_all_avg.round(1) %>
-					<% end %>
-					</p>
-					<p id="rating_cold" class="rating cold hidden"><%= ctr_cold.avg_score.round(1) %></p>
-					<p id="rating_sweety" class="rating sweety hidden"><%= ctr_sweety.avg_score.round(1) %></p>
-					<p id="rating_hardness" class="rating hardness hidden"><%= ctr_hardness.avg_score.round(1) %></p>
-				</td>
-				<!--<td><%=course.semesters.first.name%></td>-->
-				<td><%=course.department.ch_name%></td>
-				<td><%= cd.brief %></td>
-				<!--<td><%= link_to course.real_id, course_path(course) %></td>-->
-				<td><%= link_to course.ch_name, course_path(course) %></td>
-				<td><%= cd.course_teachership.teacher.name %></td>
-				<td><%= cd.memo %></td>
-				<td><%= cd.time_and_room.partition("-")[0] %></td>
-				<td><%= cd.credit %></td>
-
-			</tr>
+	<% if @course_details %>
+		<% @course_details.each do |cd|%>
+			<% course=cd.course_teachership.course %>
+				<% ctrs=cd.course_teachership.course_teacher_ratings %>
+				<% ctr_cold=ctrs.select{|ctr| ctr.rating_type=="cold"}[0] %>
+				<% ctr_sweety=ctrs.select{|ctr| ctr.rating_type=="sweety"}[0] %>
+				<% ctr_hardness=ctrs.select{|ctr| ctr.rating_type=="hardness"}[0] %>
+				<% ctr_all_avg = (ctr_cold.avg_score*ctr_cold.total_rating_counts+ctr_sweety.avg_score*ctr_sweety.total_rating_counts+ctr_hardness.avg_score*ctr_hardness.total_rating_counts)/ctrs.sum(:total_rating_counts) %>
+				<tr id="<%=cd.id%>" class="clickable-row clickable-hover" href="<%=course_path(course)%>">
+					<td>
+						<p id="rating_all" class="rating all">
+						<%if !ctr_all_avg.nan? %>
+						<%= ctr_all_avg.round(1) %>
+						<% end %>
+						</p>
+						<p id="rating_cold" class="rating cold hidden"><%= ctr_cold.avg_score.round(1) %></p>
+						<p id="rating_sweety" class="rating sweety hidden"><%= ctr_sweety.avg_score.round(1) %></p>
+						<p id="rating_hardness" class="rating hardness hidden"><%= ctr_hardness.avg_score.round(1) %></p>
+					</td>
+					<!--<td><%=course.semesters.first.name%></td>-->
+					<td><%=course.department.ch_name%></td>
+					<td><%= cd.brief %></td>
+					<!--<td><%= link_to course.real_id, course_path(course) %></td>-->
+					<td><%= link_to course.ch_name, course_path(course) %></td>
+					<td><%= cd.course_teachership.teacher.name %></td>
+					<td><%= cd.memo %></td>
+					<td><%= cd.time_and_room.partition("-")[0] %></td>
+					<td><%= cd.credit %></td>
+				</tr>
+		<% end %>
+	<% else %>
+		<tr class="row"><td colspan="8"><h4>查無結果!</h4></td></tr>
 	<% end %>
-
-
 </table>
 
 <div id="page-selection" class="text-center"></div>
