--- a/app/views/courses/simulation.html.erb
+++ b/app/views/courses/simulation.html.erb
@@ -1,38 +1,71 @@
-<%= render :partial=>"courses/search_js" %>
+<%= render :partial=>"search_js" %>
 
 <div class="row" >
-	<div class="col-md-3 " style="background-color:white;/*margin-top:50px;*/">
-		<div class="row">
-		<%= render :partial=> "schedule_list" %>
+	<!--<div class="col-md-5" style="/*background-color:white;margin-top:50px;*/">-->
+		<div class="tabbable tabs-left col-md-5">
+			
+			<ul class="nav nav-tabs" style="margin-top:50px;">
+				<li class="active"><a href="#a" data-toggle="tab" class="vertical-text" >查詢</a></li>
+				<li ><a href="#b" data-toggle="tab">已選</a></li>
+			</ul>
+			
+			<!--<div class="container">-->
+			<div class="tab-content" style="overflow:hidden;">
+			 <div class="tab-pane active" id="a">
+					<div class="panel panel-primary ">
+						<div class="panel-heading">
+							<h4 class="text-center">課程查詢</h4>
+						</div>
+						<div class="panel-body">
+							<div class="row schedule-search-bar">
+								<%= render :partial=> "schd_search_bar" %>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="tab-pane" id="b">
+					<div class="panel panel-primary" >
+						<div class="panel-heading" >
+							<h4 class="text-center">已選課程</h4>
+						</div>
+						<div class="panel-body" style="min-height:400px;">
+							<div id="has_seleted_courses"></div>
+						</div>
+					</div>
+				</div>
+			</div>
+
 		</div>
-		<div class="row">
-		</div>
-	</div>
-	
-	<div class="col-md-4 col-md-offset-1">
-		<table class="table table-bordered">
-			<tr>
-				<th class="col-md-1"></th>
-				<% days=['Mon','Tue','Wed','Thu','Fri','Sat'] %>
-				<% days.each do |day| %>
-					<th class="col-md-2"><%=day%></th>
-				<% end %>
-			</tr>
-			<% time=['M','N','A','B','C','D','X','E','F','G','H','Y','I','J','K','L'] %>
-			<% time.each do |t|%>
-				<tr>
-					<th class="schedule-grid"><%=t%></th>
-					<% i = 1 %>
-					<%  days.each do |day| %>
-						<td id="day_<%=i%>_time_<%=t%>" class="schedule-slot-empty" ></td>
-						<%i=i+1%>
+		
+	<div class="col-md-6 ">
+		<div class="panel panel-primary ">
+			<div class="panel-heading" style="background-color:#4c66a4;">
+				<h4 class="text-center">課表</h4>
+			</div>
+			<!--<div class="panel-body">-->
+				<table class="table table-bordered" id="schedule_table">
+					<tr>
+						<th class="col-md-1" ></th>
+						<% days=['Mon','Tue','Wed','Thu','Fri','Sat'] %>
+						<% days.each do |day| %>
+							<th class="col-md-2"><p class="text-center"><%=day%></p></th>
+						<% end %>
+					</tr>
+					<% time=['M','N','A','B','C','D','X','E','F','G','H','Y','I','J','K','L'] %>
+					<% time.each do |t|%>
+						<tr>
+							<th class="schedule-grid"><p class="text-center"><%=t%></p></th>
+							<% i = 1 %>
+							<%  days.each do |day| %>
+								<td id="day_<%=i%>_time_<%=t%>" class="schd-slot-empty" ></td>
+								<%i=i+1%>
+							<% end %>
+						</tr>
 					<% end %>
-				</tr>
-			<% end %>
-		</table>
-	</div>
-	<div class="col-md-3 " style="background-color:white;/*margin-top:50px;*/">
-		<div id="has_seleted_courses"></div>
+				</table>
+				
+			<!--</div>-->
+		</div>
 	</div>
 </div>
 <script>
@@ -44,7 +77,7 @@ function add_time_slot(courses){
 			var day=timearr[j][0];
 			for(var k = 1 ; k < timearr[j].length ; k++){
 				var row_id="#day_"+day+"_time_"+timearr[j][k];
-				$(row_id).removeClass("schedule-slot-empty");
+				$(row_id).removeClass("schd-slot-empty");
 				$(row_id).addClass("success");
 				$(row_id).text(courses[i].name);
 				$(row_id).popover({
@@ -63,6 +96,15 @@ $(document).ready(function(){
 		$("#has_seleted_courses").load("/courses/get_user_simulated");
 	
 	<% end %>
+	
+	var rows = $('.schd-slot-empty');//.not(':first');
+	rows.on('click', function(e) {
+        
+		/* Get current row */
+		var row = $(this);//$(this).find('td');
+		row.addClass("schd-grid-selected");
+		alert(row.attr('id'));
+	});
 	
 	/*$.getJSON("/courses/get_user_simulated", function (courses) {
 		for(var i = 0 ; i < courses.length ; i++){
@@ -121,7 +163,8 @@ function add_class(id,type){
 			}
 		}
 		save_course(id,type);
-		this_row.remove();
+		if(type=="add")
+			this_row.remove();
 	}
 }
 function save_course(cd_id,type){
@@ -133,7 +176,7 @@ function save_course(cd_id,type){
 			type: type, 
 		},
 		success: function(data) {
-			if(type=="add")
+			//if(type=="add")
 				$("#has_seleted_courses").load("/courses/get_user_simulated");
 			//alert("SUCCESS");
 		},
